// Copyright 2022 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.terminal.v1;

import "prehog/v1alpha/connect.proto";

option go_package = "github.com/gravitational/teleport/lib/teleterm/v1";

message ReportUsageEventRequest {
  string auth_cluster_id = 1;
  prehog.v1alpha.SubmitConnectEventRequest prehog_req = 2;
}
